# LiveAlignment

./: CMakeLists.txt  README.md  main.cpp  pclviewer.cpp  pclviewer.h  pclviewer.ui
lib/alignment/: CMakeLists.txt  alignment.cpp  alignment.h  alignment2.cpp
lib/apriltags/: CMakeLists.txt  apriltag.h  apriltag_math.h  apriltags_container.cpp  apriltags_container.h  tag16h5.h  tag25h7.h  tag25h9.h  tag36artoolkit.h  tag36h10.h  tag36h11.h
lib/apriltags/common/: doubles.h  doubles_floats_impl.h  floats.h  g2d.h  getopt.h  homography.h  image_f32.h  image_types.h  image_u8.h  image_u8x3.h  image_u8x4.h  matd.h  math_util.h  pam.h  pjpeg.h  pnm.h  postscript_utils.h  string_util.h  svd22.h  thash_impl.h  time_util.h  timeprofile.h  unionfind.h  workerpool.h  zarray.h  zhash.h  zmaxheap.h
lib/apriltags/common/sys/: times.h
lib/capture/: CMakeLists.txt  capture.cpp  capture.h  capture_helper.cpp  capture_helper.h
lib/helpers/: CMakeLists.txt  global_helpers.cpp  global_helpers.h
lib/pthreads-win32/: attr.c  autostatic.c  barrier.c  cleanup.c  implement.h  need_errno.h  pthread.h
lib/visualization/: CMakeLists.txt  visualizer.cpp  visualizer.h
